src-tauri/src/core/prompt/snapshots/tiycode_lib__core__prompt__snapshot_tests__tests__snap_surface@compaction_compact.snap
---
source: src/core/prompt/snapshot_tests.rs
expression: snapshot_text
---
=== COMPOSED PROMPT TEXT ===


=== AUDIT ===
schema_version: 3
